--- a/src/main/resources/templates/html/category/categoryDetail.html
+++ b/src/main/resources/templates/html/category/categoryDetail.html
@@ -1,59 +1,116 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="/css/insertAct.css">
     <th:block th:replace="common/head.html"/>
+    <link rel="stylesheet" href="/css/boardType.css">
+<!--    <style>-->
+<!--        #buttonSet {-->
+<!--            float: right;-->
+<!--            position: relative;-->
+<!--            right: -10px;-->
+<!--            margin-top: 10px;-->
+<!--        }-->
+<!--        #reset, #submit, #edit {-->
+<!--            border: none;-->
+<!--            width: 130px;-->
+<!--            background: transparent;-->
+<!--        }-->
+<!--        .key, .content {-->
+<!--            float: left;-->
+<!--        }-->
+<!--        .key {-->
+<!--            width: 150px;-->
+<!--            text-align: left;-->
+<!--            color: #515151;-->
+<!--        }-->
+<!--        .section1 {-->
+<!--            margin-bottom: 30px;-->
+<!--        }-->
+<!--        textarea {-->
+<!--            width: 80%;-->
+<!--            height: 300px;-->
+<!--        }-->
+<!--        input {-->
+<!--            width: 400px;-->
+<!--            border-radius: 30px;-->
+<!--            border: 1px solid #a5a5a5;-->
+<!--            color: #b3b3b3;-->
+<!--            padding: 0 0 0 10px;-->
+<!--            height: 25px;-->
+<!--            margin-right: 36px;-->
+<!--        }-->
+<!--    </style>-->
 </head>
 <body>
-<header th:replace="common/menu :: header"></header>
+    <header th:replace="common/menu :: header"></header>
 
-<div lang="en" th:replace="common/menu :: menu"></div>
+    <div lang="en" th:replace="common/menu :: menu"></div>
 
-<div id="main" style="margin-left: 15%;">
+    <div id="main">
+        <h4>하위 카테고리 상세</h4>
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>커뮤니티 디테일</h1>
-  </div>
-</div>
-
-<div id="wrap" style="padding-left:10px;">
-
-	<h2 th:text="'카테고리 ID - ' + ${categoryDto.id}"></h2>
-    <h2 th:text="'카테고리 메모 - ' + ${categoryDto.memo}"></h2>
-    <h2 th:text="'카테고리 상태 - ' + ${categoryDto.status}"></h2>
-    <h2 th:text="'Top - ' + ${categoryDto.topCategory}"></h2>
-    <h2 th:text="'관리자 - ' + ${categoryDto.communityManager}"></h2>
-    <p th:inline="text">작성일 : [[${#temporals.format(categoryDto.modDate, 'yyyy-MM-dd HH:mm')}]]</p>
-
-    <!-- 수정/삭제 -->
-    <div>
-        <a th:href="@{'/'+${path}+'/category/edit/' + ${categoryDto.id}}">
-            <button>수정</button>
-        </a>
-
-        <form id="delete-form" th:action="@{'/'+${path}+'/category/delete/' + ${categoryDto.id}}" method="post">
-            <input type="hidden" name="_method" value="delete"/>
-            <button id="delete-btn">삭제</button>
-        </form>
-        
-        <a th:href="@{'/'+${path}+'/category?topCategory=' + ${categoryDto.topCategory}}">
-            <button>목록</button>
-        </a>
+        <div id="actInfo" style="height: 200px">
+            <input type="hidden" id="categoryId" th:value="${categoryDto.id}">
+            <br>
+            <div class="section1">
+                <div class="key">
+                    이름
+                </div>
+                <div class="content">
+                    <input type="text" name="title" th:value="${categoryDto.memo}" disabled>
+                </div>
+            </div>
+            <br>
+            <div class="section1">
+                <div class="key">
+                    상위 카테고리
+                </div>
+                <div class="content">
+                    <input type="text" name="parent" th:if="${categoryDto.topCategory==1}" value="공지사항" disabled>
+                </div>
+            </div>
+            <br>
+            <div class="section1">
+                <div style="float: left;width: 60%">
+                    <div class="key">
+                        관리자
+                    </div>
+                    <div class="content" style="width: 30%">
+                        <input type="text" name="manager" th:value="${categoryDto.communityManager}" style="width: 100%" disabled>
+                    </div>
+                </div>
+                <div style="float: left;width: 40%">
+                    <div class="key">
+                        생성일
+                    </div>
+                    <div class="content" style="width: 30%">
+                        <input type="text" name="date" th:value="${#temporals.format(categoryDto.modDate, 'yyyy-MM-dd HH:mm')}" style="width: 100%" disabled>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="buttonSet">
+            <button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/list_big.png"></button>
+            <button id="edit" type="button" name="button" onclick="goEdit()"><img src="/img/mod_big.png"></button>
+<!--            <form id="delete-form" th:action="@{'/'+${path}+'/category/delete/' + ${categoryDto.id}}" method="post">-->
+<!--                <input type="hidden" name="_method" value="delete"/>-->
+<!--                <button id="delete-btn">삭제</button>-->
+<!--            </form>-->
+        </div>
     </div>
 
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var categoryDto = /*[[${categoryDto}]]*/ "";
-        /*]]>*/
+    <div lang="en" th:replace="common/footer :: footer"></div>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+
+        function goEdit() {
+            var path="/notice/category/edit/";
+            path+=document.getElementById("categoryId").value;
+            location.href=path;
+        }
     </script>
-    <script th:inline="javascript" th:src="@{/js/community.js}"></script>
-    
-    
-</div>
-
-<div lang="en" th:replace="common/footer :: footer"></div>
-
-</div>
 </body>
 </html>
