--- a/src/main/resources/templates/html/category/categoryUpdate.html
+++ b/src/main/resources/templates/html/category/categoryUpdate.html
@@ -1,57 +1,98 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+	<link rel="stylesheet" href="/css/insertAct.css">
 	<th:block th:replace="common/head.html"/>
+	<link rel="stylesheet" href="/css/boardType.css">
+<!--	<style>-->
+<!--		#buttonSet {-->
+<!--			float: right;-->
+<!--			position: relative;-->
+<!--			right: -10px;-->
+<!--			margin-top: 10px;-->
+<!--		}-->
+<!--		#reset, #submit, #edit {-->
+<!--			border: none;-->
+<!--			width: 130px;-->
+<!--			background: transparent;-->
+<!--		}-->
+<!--		.key, .content {-->
+<!--			float: left;-->
+<!--		}-->
+<!--		.key {-->
+<!--			width: 150px;-->
+<!--			text-align: left;-->
+<!--			color: #515151;-->
+<!--		}-->
+<!--		.section1 {-->
+<!--			margin-bottom: 30px;-->
+<!--		}-->
+<!--		textarea {-->
+<!--			width: 80%;-->
+<!--			height: 300px;-->
+<!--		}-->
+<!--		input {-->
+<!--			width: 400px;-->
+<!--			border-radius: 30px;-->
+<!--			border: 1px solid #a5a5a5;-->
+<!--			color: #b3b3b3;-->
+<!--			padding: 0 0 0 10px;-->
+<!--			height: 25px;-->
+<!--			margin-right: 36px;-->
+<!--		}-->
+<!--	</style>-->
 </head>
 <body>
-<header th:replace="common/menu :: header"></header>
+	<header th:replace="common/menu :: header"></header>
 
-<div lang="en" th:replace="common/menu :: menu"></div>
+	<div lang="en" th:replace="common/menu :: menu"></div>
 
-<div id="main" style="margin-left: 15%">
+	<div id="main">
+		<h4>하위 카테고리 수정</h4>
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>카테고리 수정</h1>
-  </div>
-</div>
-	
-	<div>
-	    <form th:action="@{'/'+${path}+'/category/edit/' + ${categoryDto.id}}" method="post">
-	    	<div>
-		        <input type="hidden" name="_method" value="put"/>
-		        <input type="hidden" name="id" th:value="${categoryDto.id}"/>
-		        <input type="hidden" name="topCategory" th:value="${categoryDto.topCategory}"/>
-	        </div>
-	        <div>
-		       	항목 : <input type="text" name="memo" th:value="${categoryDto.memo}">
-			</div><br>
-			<div>
-				관리자 : <input type="text" name="communityManager" th:value="${categoryDto.communityManager}"> 
-			</div><br>
-			<div>
-				상태 : 
-		       	<select name="status">
-		       		<option value="1" th:selected="1 == ${categoryDto.status}">정상</option>
-		       		<option value="0" th:selected="0 == ${categoryDto.status}">삭제</option>
-		       	</select>
-			</div><br>
-	       	
-	       	<div>
-		       	<div style="float:right">
-		       		<button th:href="@{'/'+${path}+'/category?topCategory='+${categoryDto.topCategory}}">목록</button>
-		       	</div>
-		       	<div style="float:right">
-		       		<input type="submit" value="수정"><br>
-		       	</div>
-	       	</div>
-	    </form>
-    </div>
+		<form th:action="@{'/'+${path}+'/category/edit/' + ${categoryDto.id}}" method="post" style="width: 100%">
+			<input type="hidden" name="_method" value="put"/>
+			<input type="hidden" name="id" th:value="${categoryDto.id}"/>
+			<input type="hidden" name="topCategory" th:value="${categoryDto.topCategory}"/>
+			<div style="display: none">
+				<select name="status">
+					<option value="1" th:selected="1 == ${categoryDto.status}">정상</option>
+					<option value="0" th:selected="0 == ${categoryDto.status}">삭제</option>
+				</select>
+			</div>
+			<div id="actInfo" style="height: 150px">
+				<br>
+				<div class="section1">
+					<div class="key">
+						이름
+					</div>
+					<div class="content">
+						<input type="text" name="memo" th:value="${categoryDto.memo}">
+					</div>
+				</div>
+				<br>
+				<div class="section1">
+					<div class="key">
+						관리자
+					</div>
+					<div class="content">
+						<input type="text" name="communityManager" th:value="${categoryDto.communityManager}">
+					</div>
+				</div>
+			</div>
+			<div id="buttonSet">
+				<button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/cancle_big.png"></button>
+				<button id="submit" type="submit" name="button"><img src="/img/com_big.png"></button>
+			</div>
+		</form>
+	</div>
     
     <div lang="en" th:replace="common/footer :: footer"></div>
 
-</div>
-
+	<script>
+		function goBack() {
+			window.history.back();
+		}
+	</script>
 </body>
 </html>
