--- a/src/main/resources/templates/html/notice/detail.html
+++ b/src/main/resources/templates/html/notice/detail.html
@@ -1,90 +1,141 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+	<link rel="stylesheet" href="/css/insertAct.css">
 	<th:block th:replace="common/head.html"/>
+	<link rel="stylesheet" href="/css/boardType.css">
+<!--	<style>-->
+<!--		#buttonSet {-->
+<!--			float: right;-->
+<!--			position: relative;-->
+<!--			right: -10px;-->
+<!--			margin-top: 20px;-->
+<!--		}-->
+<!--		#reset, #submit, #edit {-->
+<!--			border: none;-->
+<!--			width: 130px;-->
+<!--			background: transparent;-->
+<!--		}-->
+<!--		.key, .content {-->
+<!--			float: left;-->
+<!--		}-->
+<!--		.key {-->
+<!--			width: 150px;-->
+<!--			text-align: left;-->
+<!--			color: #019783;-->
+<!--			font-size: 18px;-->
+<!--		}-->
+<!--		.section1 {-->
+<!--			margin-bottom: 18px;-->
+<!--		}-->
+<!--		textarea {-->
+<!--			width: 80%;-->
+<!--			height: 300px;-->
+<!--		}-->
+<!--		input {-->
+<!--			width: 400px;-->
+<!--			border-radius: 30px;-->
+<!--			border: 1px solid #a5a5a5;-->
+<!--			color: #494949;-->
+<!--			padding: 0 0 0 10px;-->
+<!--			height: 25px;-->
+<!--			margin-right: 36px;-->
+<!--		}-->
+<!--	</style>-->
 </head>
 <body>
-<header th:replace="common/menu :: header"></header>
+	<header th:replace="common/menu :: header"></header>
 
-<div lang="en" th:replace="common/menu :: menu"></div>
+	<div lang="en" th:replace="common/menu :: menu"></div>
 
-<div id="main" style="margin-left: 15%;">
+	<div id="main">
+		<h4>공지 상세</h4>
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>공지 디테일</h1>
-  </div>
-</div>
-
-<div id="wrap" style="padding-left:10px;">
-
-	<!-- Notice Content -->
-	<div>
-		<div>
-			<div style="float: left; width: 10%;">
-				<h2 th:text="'ID '+${noticeDto.id}"></h2>
+		<div id="actInfo" style="height: 580px">
+			<input type="hidden" id="noticeId" th:value="${noticeDto.id}">
+			<br>
+			<div class="section1">
+				<div style="float: left;width: 60%">
+					<div class="key">
+						제목
+					</div>
+					<div class="content" style="width: 55%">
+						<input type="text" name="title" th:value="${noticeDto.title}" style="width: 100%" disabled >
+					</div>
+				</div>
+				<div style="float: left;width: 40%">
+					<div class="key">
+						조회수
+					</div>
+					<div class="content" style="width: 30%">
+						<input type="text" name="view" th:value="${noticeDto.view}" style="width: 100%" disabled>
+					</div>
+				</div>
 			</div>
-			<div style="float: left; width: 55%">
-				<h2 th:text="${noticeDto.title}"></h2>
+			<br>
+			<div class="section1">
+				<div style="float: left;width: 60%">
+					<div class="key">
+						작성자
+					</div>
+					<div class="content" style="width: 30%">
+						<input type="text" name="writer" th:value="${noticeDto.writer}" style="width: 100%" disabled>
+					</div>
+				</div>
+				<div style="float: left;width: 40%">
+					<div class="key">
+						작성일
+					</div>
+					<div class="content" style="width: 30%">
+						<input type="text" name="date" th:value="${#temporals.format(noticeDto.modDate, 'yyyy-MM-dd HH:mm')}" style="width: 100%" disabled>
+					</div>
+				</div>
 			</div>
-			<div style="float: right; width: 35%;">
-				<h2 th:text="'작성자 - ' + ${noticeDto.writer}"></h2>
+			<br>
+			<div class="section1">
+				<div class="key">
+					카테고리
+				</div>
+				<div class="content">
+					<input type="text" value="공지사항" name="topCategory" disabled>
+				</div>
 			</div>
-			
+			<br>
+			<div class="section1">
+				<div class="key">
+					하위 카테고리
+				</div>
+				<div class="content">
+					<input type="text" name="category" th:value="${category}" disabled>
+				</div>
+			</div>
+			<br>
+			<div class="editor_wrap">
+				<div class="key">내용</div>
+				<textarea name="content" id="summernote" style="margin-top: 16px" disabled>[[${noticeDto.content}]]</textarea>
+			</div>
 		</div>
-		<div>
-			<div style="float: left; width: 10%;">
-				<p th:text="'view '+${noticeDto.view}"></p>	
-			</div>
-			<div style="float: left; width: 25%;">
-		    	<p th:text="'category '+${category}"></p>
-		    </div>
-		    <div style="float: right; width: 35%;">
-				<p th:inline="text">[[${#temporals.format(noticeDto.modDate, 'yyyy-MM-dd HH:mm')}]]</p>
-			</div>
+		<div id="buttonSet">
+			<button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/list_big.png"></button>
+			<button id="edit" type="button" name="button" onclick="goEdit()"><img src="/img/mod_big.png"></button>
+<!--				<form id="delete-form" th:action="@{'/notice/post/' + ${noticeDto.id}}" method="post">-->
+<!--					<input type="hidden" name="_method" value="delete"/>-->
+<!--					<button id="delete-btn">삭제</button>-->
+<!--				</form>-->
 		</div>
-		<div>
-			<span th:utext="${noticeDto.content}"></span>
-		</div>
-		<!--
-			<h2 th:text="'Top - ' + ${noticeDto.topCategory}"></h2> 
-		 -->
-    </div>
+	</div>
 
-	<!-- Update / Delete / List Button -->
-    <div>
-    	<div style="float: right">
-			<a th:href="@{'/notice/?category=' + ${noticeDto.categoryId}}">
-	            <button>목록</button>
-	        </a>
-		</div>
-    	<div style="float: right">
-	        <form id="delete-form" th:action="@{'/notice/post/' + ${noticeDto.id}}" method="post">
-	            <input type="hidden" name="_method" value="delete"/>
-	            <button id="delete-btn">삭제</button>
-	        </form>
-        </div>
-    	<div style="float: right">
-    		<a th:href="@{'/notice/post/edit/' + ${noticeDto.id}}">
-            	<button>수정</button>
-        	</a>
-    	</div>
+	<div lang="en" th:replace="common/footer :: footer"></div>
+	<script>
+		function goBack() {
+			window.history.back();
+		}
 
-    </div>
-
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var noticeDto = /*[[${noticeDto}]]*/ "";
-        /*]]>*/
-    </script>
-    <script th:inline="javascript" th:src="@{/js/notice.js}"></script>
-    
-    
-</div>
-
-<div lang="en" th:replace="common/footer :: footer"></div>
-
-</div>
+		function goEdit() {
+			var path="/notice/post/edit/";
+			path+=document.getElementById("noticeId").value;
+			location.href=path;
+		}
+	</script>
 </body>
 </html>
