--- a/src/main/resources/templates/html/notice/update.html
+++ b/src/main/resources/templates/html/notice/update.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+	<link rel="stylesheet" href="/css/insertAct.css">
 	<th:block th:replace="common/head.html"/>
+	<link rel="stylesheet" href="/css/boardType.css">
+<!--	<style>-->
+<!--		#buttonSet {-->
+<!--			float: right;-->
+<!--			position: relative;-->
+<!--			right: -10px;-->
+<!--			margin-top: 10px;-->
+<!--		}-->
+<!--		#reset, #submit, #edit {-->
+<!--			border: none;-->
+<!--			width: 130px;-->
+<!--			background: transparent;-->
+<!--		}-->
+<!--		.key, .content {-->
+<!--			float: left;-->
+<!--		}-->
+<!--		.key {-->
+<!--			width: 150px;-->
+<!--			text-align: left;-->
+<!--			color: #515151;-->
+<!--		}-->
+<!--		.section1 {-->
+<!--			margin-bottom: 30px;-->
+<!--		}-->
+<!--		textarea {-->
+<!--			width: 80%;-->
+<!--			height: 300px;-->
+<!--		}-->
+<!--		input {-->
+<!--			width: 400px;-->
+<!--			border-radius: 30px;-->
+<!--			border: 1px solid #a5a5a5;-->
+<!--			color: #b3b3b3;-->
+<!--			padding: 0 0 0 10px;-->
+<!--			height: 25px;-->
+<!--			margin-right: 36px;-->
+<!--		}-->
+<!--	</style>-->
 </head>
 <body>
-<header th:replace="common/menu :: header"></header>
+	<header th:replace="common/menu :: header"></header>
 
-<div lang="en" th:replace="common/menu :: menu"></div>
+	<div lang="en" th:replace="common/menu :: menu"></div>
 <!-- Summernote Editor -->
 	<script >
 		$(document).ready(function() {
@@ -45,66 +84,76 @@
 		});
 	</script>
 
-<div id="main" style="margin-left: 15%">
+	<div id="main">
+		<h4>공지사항 수정</h4>
 
-<div class="w3-teal">
-  <button id="openNav" style="display: none" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>공지 수정</h1>
-  </div>
-</div>
-
-	<div>
-	    <form th:action="@{'/notice/post/edit/' + ${noticeDto.id}}" method="post">
-	    	<div>
-	        	<input type="hidden" name="_method" value="put"/>
-		        <input type="hidden" name="id" th:value="${noticeDto.id}"/>
-	        	<input type="hidden" name="view" th:value="${noticeDto.view}"/>
-	        	<input type="hidden" value="1" name="topCategory">
-	        </div>
-	
-			<div>
-				제목 : <input type="text" name="title" th:value="${noticeDto.title}">
-			</div> <br>
-		    <div>
-		    	작성자 : <input type="text" name="writer" th:value="${noticeDto.writer}">
-		    </div> <br>
-		    <div>
-			    Sub: 
-		        <select name="categoryId">
-		        	<option th:each="category : ${categoryDto}"
-		        			th:text="${category.memo}"
-		        			th:value="${category.id}"
-		        			th:selected="${category.id} == ${noticeDto.categoryId}"/> 
-		        </select>
-	        </div> <br>
-			<div>
-	        	Status:
-	        	<select name="status">
-	        		<option value="1" th:selected="1 == ${noticeDto.status}">활성화</option>
-	        		<option value="0" th:selected="0 == ${noticeDto.status}">비활성화</option>
-	        	</select>
-	        </div> <br>
-	        
-	        <div class="editor_wrap">
-			   <textarea name="content" id="summernote" th:text="${noticeDto.content}"></textarea>
-			</div><br>
-	
-			<div>
-				<div style="float:right">
-					<button th:href="@{/notice}">목록</button>
+		<form th:action="@{'/notice/post/edit/' + ${noticeDto.id}}" method="post" style="width: 100%">
+			<input type="hidden" name="_method" value="put"/>
+			<input type="hidden" name="id" th:value="${noticeDto.id}"/>
+			<input type="hidden" name="view" th:value="${noticeDto.view}"/>
+			<input type="hidden" value="1" name="topCategory">
+			<div style="display: none">
+				<select name="status">
+					<option value="1" th:selected="1 == ${noticeDto.status}">활성화</option>
+					<option value="0" th:selected="0 == ${noticeDto.status}">비활성화</option>
+				</select>
+			</div>
+			<div id="actInfo" style="height: 520px">
+				<br>
+				<div class="section1">
+					<div class="key">
+						제목
+					</div>
+					<div class="content">
+						<input type="text" name="title" th:value="${noticeDto.title}">
+					</div>
 				</div>
-				<div style="float:right">
-					<input type="submit" value="수정">
+				<br>
+				<div class="section1">
+					<div class="key">
+						작성자
+					</div>
+					<div class="content">
+						<input type="text" name="writer" th:value="${noticeDto.writer}">
+					</div>
+				</div>
+				<br>
+				<div class="section1" style="margin-bottom: 30px">
+					<div class="key">
+						하위 카테고리
+					</div>
+					<div class="content">
+						<select name="categoryId">
+							<option th:each="category : ${categoryDto}"
+									th:text="${category.memo}"
+									th:value="${category.id}"
+									th:selected="${category.id} == ${noticeDto.categoryId}"/>
+						</select>
+					</div>
+				</div>
+				<br>
+				<div class="editor_wrap">
+					<div class="key">내용</div>
+					<textarea name="content" id="summernote" th:text="${noticeDto.content}"></textarea>
 				</div>
 			</div>
-	    </form>
-    </div>
+			<div id="buttonSet">
+				<button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/cancle_big.png"></button>
+				<button id="submit" type="submit" name="button"><img src="/img/com_big.png"></button>
+			</div>
+		</form>
+	</div>
+
     <div lang="en" th:replace="common/footer :: footer"></div>
 
 </div>
 	<!-- CKEditor -->
 	<script type="text/javascript">
+
+		function goBack() {
+			window.history.back();
+		}
+
 		ClassicEditor
 		    .create( document.querySelector( '#content' ) )
 		    .catch( error => {
