--- a/src/main/resources/templates/html/notice/write.html
+++ b/src/main/resources/templates/html/notice/write.html
@@ -3,43 +3,44 @@
 <head>
 	<link rel="stylesheet" href="/css/insertAct.css">
 	<th:block th:replace="common/head.html"/>
-	<style>
-		#buttonSet {
-			float: right;
-			position: relative;
-			right: -10px;
-			margin-top: 10px;
-		}
-		#reset, #submit {
-			border: none;
-			width: 130px;
-			background: transparent;
-		}
-		.key, .content {
-			float: left;
-		}
-		.key {
-			width: 150px;
-			text-align: left;
-			color: #515151;
-		}
-		.section1 {
-			margin-bottom: 30px;
-		}
-		textarea {
-			width: 80%;
-			height: 300px;
-		}
-		input {
-			width: 400px;
-			border-radius: 30px;
-			border: 1px solid #a5a5a5;
-			color: #b3b3b3;
-			padding: 0 0 0 10px;
-			height: 25px;
-			margin-right: 36px;
-		}
-	</style>
+	<link rel="stylesheet" href="/css/boardType.css">
+<!--	<style>-->
+<!--		#buttonSet {-->
+<!--			float: right;-->
+<!--			position: relative;-->
+<!--			right: -10px;-->
+<!--			margin-top: 20px;-->
+<!--		}-->
+<!--		#reset, #submit {-->
+<!--			border: none;-->
+<!--			width: 130px;-->
+<!--			background: transparent;-->
+<!--		}-->
+<!--		.key, .content {-->
+<!--			float: left;-->
+<!--		}-->
+<!--		.key {-->
+<!--			width: 150px;-->
+<!--			text-align: left;-->
+<!--			color: #515151;-->
+<!--		}-->
+<!--		.section1 {-->
+<!--			margin-bottom: 30px;-->
+<!--		}-->
+<!--		textarea {-->
+<!--			width: 80%;-->
+<!--			height: 300px;-->
+<!--		}-->
+<!--		input {-->
+<!--			width: 400px;-->
+<!--			border-radius: 30px;-->
+<!--			border: 1px solid #a5a5a5;-->
+<!--			color: #b3b3b3;-->
+<!--			padding: 0 0 0 10px;-->
+<!--			height: 25px;-->
+<!--			margin-right: 36px;-->
+<!--		}-->
+<!--	</style>-->
 </head>
 <body>
 <header th:replace="common/menu :: header"></header>
@@ -88,7 +89,7 @@
 
 		<form action="/notice/post" method="post" style="width: 100%">
 			<input type="hidden" value="0" name="view">
-			<div id="actInfo">
+			<div id="actInfo" style="height: 580px;">
 				<br>
 				<div class="section1">
 					<div class="key">
@@ -113,11 +114,12 @@
 						카테고리
 					</div>
 					<div class="content">
-						<input type="text" value="1" name="topCategory" disabled>
+						<span th:text="공지사항" style="color: #494949;"></span>
+						<input type="hidden" value="1" name="topCategory">
 					</div>
 				</div>
 				<br>
-				<div class="section1">
+				<div class="section1" style="margin-bottom: 30px">
 					<div class="key">
 						하위 카테고리
 					</div>
@@ -136,8 +138,8 @@
 				</div>
 			</div>
 			<div id="buttonSet">
-				<button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/cancel.png"/></button>
-				<button id="submit" type="submit" name="button"><img src="/img/register.png"/></button>
+				<button id="reset" type="button" name="button" onclick="goBack()"><img src="/img/cancle_big.png"/></button>
+				<button id="submit" type="submit" name="button"><img src="/img/com_big.png"/></button>
 			</div>
 		</form>
 	</div>
