--- a/src/main/resources/templates/html/activity/activity.html
+++ b/src/main/resources/templates/html/activity/activity.html
@@ -43,6 +43,7 @@
 								<option th:selected="${status==4}" value="4">활동 진행 중</option>
 								<option th:selected="${status==5}" value="5">활동 완료</option>
 								<option th:selected="${status==6}" value="6">취소된 활동</option>
+								<option th:selected="${status==7}" value="7">물건 거절</option>
 							</select>
 						</div>
 						<div class="selectm">
